--- a/requirements.txt
+++ b/requirements.txt
@@ -1,131 +1,132 @@
-altair @ file:///home/conda/feedstock_root/build_artifacts/altair-split_1711824856061/work
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
-attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1704011227531/work
-babel @ file:///C:/b/abs_ffzt1bmjth/croot/babel_1737454394148/work
+altair==5.3.0
+asttokens==2.4.1
+attrs==23.2.0
+babel==2.16.0
 backcall==0.2.0
-beautifulsoup4 @ file:///C:/b/abs_d5wytg_p0w/croot/beautifulsoup4-split_1718029833749/work
+beautifulsoup4==4.12.3
 bleach==6.1.0
-blinker @ file:///home/conda/feedstock_root/build_artifacts/blinker_1698890160476/work
-Bottleneck @ file:///C:/b/abs_816hr2khp1/croot/bottleneck_1731058648110/work
-Brotli @ file:///C:/b/abs_c415aux9ra/croot/brotli-split_1736182803933/work
-brotlipy @ file:///D:/bld/brotlipy_1695621856105/work
-cachetools @ file:///home/conda/feedstock_root/build_artifacts/cachetools_1708987703938/work
-certifi @ file:///C:/b/abs_8a944p1_gn/croot/certifi_1738623753421/work/certifi
-cffi @ file:///D:/bld/cffi_1696001932509/work
-charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1698833585322/work
-click @ file:///D:/bld/click_1692312014553/work
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work
-comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1710320294760/work
-contourpy @ file:///C:/b/abs_f2u2o_8s9g/croot/contourpy_1732540071787/work
-cryptography @ file:///C:/b/abs_f5n93r0tun/croot/cryptography_1710350404202/work
-cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
-debugpy @ file:///D:/bld/debugpy_1707444619227/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
+blinker==1.7.0
+Bottleneck==1.4.2
+Brotli==1.0.9
+brotlipy==0.7.0
+cachetools==5.3.3
+certifi==2025.1.31
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+comm==0.2.2
+contourpy==1.3.1
+cryptography==42.0.5
+cycler==0.11.0
+debugpy==1.8.1
+decorator==5.1.1
 defusedxml==0.7.1
 docopt==0.6.2
-duckdb @ file:///D:/bld/python-duckdb_1711119574960/work/tools/pythonpkg
-et-xmlfile @ file:///home/conda/feedstock_root/build_artifacts/et_xmlfile_1674664118162/work
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1704921103267/work
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1698579936712/work
+duckdb==0.10.1
+et-xmlfile==1.1.0
+exceptiongroup==1.2.0
+executing==2.0.1
 fastjsonschema==2.19.1
-Flask @ file:///C:/b/abs_f9w7doyu0h/croot/flask_1716545924884/work
-fonttools @ file:///C:/b/abs_4crkswws2h/croot/fonttools_1737040078745/work
-gitdb @ file:///home/conda/feedstock_root/build_artifacts/gitdb_1697791558612/work
-GitPython @ file:///home/conda/feedstock_root/build_artifacts/gitpython_1711991025291/work
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1701026962277/work
-importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1710971335535/work
-importlib_resources @ file:///home/conda/feedstock_root/build_artifacts/importlib_resources_1711040877059/work
-ipykernel @ file:///D:/bld/ipykernel_1708996677248/work
+Flask==3.0.3
+fonttools==4.55.3
+gitdb==4.0.11
+GitPython==3.1.43
+idna==3.6
+importlib_metadata==7.1.0
+importlib_resources==6.4.0
+ipykernel==6.29.3
 ipython==8.12.3
-ipywidgets @ file:///home/conda/feedstock_root/build_artifacts/ipywidgets_1707427226251/work
-itsdangerous @ file:///C:/b/abs_c4vwgdr5yn/croot/itsdangerous_1716533399914/work
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
-Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1704966972576/work
-joblib @ file:///C:/b/abs_f4b98l6lgk/croot/joblib_1718217224240/work
-jsonschema @ file:///home/conda/feedstock_root/build_artifacts/jsonschema-meta_1705707496704/work
-jsonschema-specifications @ file:///tmp/tmpkv1z7p57/src
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1710255804825/work
-jupyter_core @ file:///D:/bld/jupyter_core_1710257295326/work
+ipywidgets==8.1.2
+itsdangerous==2.2.0
+jedi==0.19.1
+Jinja2==3.1.3
+joblib==1.4.2
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+jupyter_client==8.6.1
+jupyter_core==5.7.2
 jupyterlab_pygments==0.3.0
-jupyterlab_widgets @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_widgets_1707421892171/work
-kiwisolver @ file:///C:/b/abs_faf90xet7a/croot/kiwisolver_1737040915779/work
-markdown-it-py @ file:///home/conda/feedstock_root/build_artifacts/markdown-it-py_1686175045316/work
-MarkupSafe @ file:///D:/bld/markupsafe_1706900055959/work
+jupyterlab_widgets==3.0.10
+kiwisolver==1.4.8
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
 matplotlib==3.10.0
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1660814786464/work
-mdurl @ file:///home/conda/feedstock_root/build_artifacts/mdurl_1704317613764/work
+matplotlib-inline==0.1.6
+mdurl==0.1.2
 mistune==3.0.2
-mkl-service==2.4.1
 mkl_fft==1.3.8
-mkl_random @ file:///D:/bld/mkl_random_1707960116672/work
+mkl_random==1.2.5
+mkl-service==2.4.1
 nbclient==0.10.0
 nbconvert==7.16.3
 nbformat==5.10.4
-nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
-numexpr @ file:///C:/b/abs_05o8p7bfml/croot/numexpr_1730215959182/work
-numpy @ file:///C:/b/abs_c1ywpu18ar/croot/numpy_and_numpy_base_1708638681471/work/dist/numpy-1.26.4-cp312-cp312-win_amd64.whl#sha256=becc06674317799ad0165a939a7613809d0bee9bd328a1e4308c57c39cacf08c
-openpyxl @ file:///D:/bld/openpyxl_1695464903821/work
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1710075952259/work
-pandas @ file:///C:/b/abs_e18w9ay4we/croot/pandas_1732735115740/work/dist/pandas-2.2.3-cp312-cp312-win_amd64.whl#sha256=2c8058e41dda2e7ecfff0740ad1d98f17d528c740f71b038c523a9d24d2321b0
+nest_asyncio==1.6.0
+numexpr==2.10.1
+numpy==1.26.4
+openpyxl==3.1.2
+packaging==24.0
+pandas==2.2.3
 pandocfilters==1.5.1
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1712320355065/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
-pillow @ file:///D:/bld/pillow_1712154618372/work
+parso==0.8.4
+pickleshare==0.7.5
+pillow==10.3.0
+pip==24.0
 pipreqs==0.5.0
-pkgutil_resolve_name @ file:///home/conda/feedstock_root/build_artifacts/pkgutil-resolve-name_1694617248815/work
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1706713388748/work
-plotly @ file:///home/conda/feedstock_root/build_artifacts/plotly_1708020413888/work
-prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1702399386289/work
+pkgutil_resolve_name==1.3.10
+platformdirs==4.2.0
+plotly==5.19.0
+prompt-toolkit==3.0.42
 protobuf==3.20.3
-psutil @ file:///D:/bld/psutil_1705722515136/work
-pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1642875951954/work
-pyarrow @ file:///C:/b/abs_93i_y2dub4/croot/pyarrow_1707330894046/work/python
-pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1711811537435/work
-pydeck @ file:///home/conda/feedstock_root/build_artifacts/pydeck_1667589451974/work
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1700607939962/work
-pyOpenSSL @ file:///home/conda/feedstock_root/build_artifacts/pyopenssl_1706660063483/work
-pyparsing @ file:///C:/b/abs_40z8gyj9wi/croot/pyparsing_1731445739241/work
+psutil==5.9.8
+pure-eval==0.2.2
+pyarrow==14.0.2
+pycparser==2.22
+pydeck==0.8.0b4
+Pygments==2.17.2
+pyOpenSSL==24.0.0
+pyparsing==3.2.0
 PyQt6==6.7.1
-PyQt6_sip @ file:///C:/b/abs_28s7k4h_hl/croot/pyqt-split_1740498234166/work/pyqt_sip
-PySocks @ file:///D:/bld/pysocks_1661604991356/work
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1709299778482/work
-pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1706886791323/work
+PyQt6_sip==13.9.1
+PySocks==1.7.1
+python-dateutil==2.9.0
+pytz==2024.1
 pywin32==306
-PyYAML @ file:///D:/bld/pyyaml_1695373772678/work
-pyzmq @ file:///D:/bld/pyzmq_1701783321880/work
-referencing @ file:///home/conda/feedstock_root/build_artifacts/referencing_1710763696991/work
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1684774241324/work
-rich @ file:///home/conda/feedstock_root/build_artifacts/rich-split_1709150387247/work/dist
-rpds-py @ file:///D:/bld/rpds-py_1707922869224/work
-scikit-learn @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/scikit-learn_1699496316170/work
-scipy @ file:///C:/b/abs_5ejjagtvrz/croot/scipy_1737132284367/work/dist/scipy-1.15.1-cp312-cp312-win_amd64.whl#sha256=46f111b8c2fbc0f264a920bd3532d460b9fe4d5ea429a32b80c3e766856dd90b
-seaborn @ file:///C:/b/abs_12uob0tcou/croot/seaborn_1738256922386/work
+PyYAML==6.0.1
+pyzmq==25.1.2
+referencing==0.34.0
+requests==2.31.0
+rich==13.7.1
+rpds-py==0.18.0
+scikit-learn==1.3.0
+scipy==1.15.1
+seaborn==0.13.2
 setuptools==75.8.0
-sip @ file:///C:/b/abs_5cto136kse/croot/sip_1738856220313/work
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
-smmap @ file:///home/conda/feedstock_root/build_artifacts/smmap_1634310307496/work
-soupsieve @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/soupsieve_1699496611169/work
-stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
-streamlit @ file:///C:/b/abs_85fcdsuzol/croot/streamlit-split_1740431233321/work/streamlit
-tenacity @ file:///home/conda/feedstock_root/build_artifacts/tenacity_1692026804430/work
-threadpoolctl @ file:///C:/b/abs_def0dwqlft/croot/threadpoolctl_1719407816649/work
+sip==6.10.0
+six==1.16.0
+smmap==5.0.0
+soupsieve==2.5
+stack-data==0.6.2
+streamlit==1.42.0
+tenacity==8.2.3
+threadpoolctl==3.5.0
 tinycss2==1.2.1
-toml @ file:///home/conda/feedstock_root/build_artifacts/toml_1604308577558/work
-toolz @ file:///home/conda/feedstock_root/build_artifacts/toolz_1706112571092/work
-tornado @ file:///D:/bld/tornado_1708363233297/work
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1710254411456/work
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1712329955671/work
-tzdata @ file:///home/conda/feedstock_root/build_artifacts/python-tzdata_1707747584337/work
-tzlocal @ file:///D:/bld/tzlocal_1698013020014/work
-unicodedata2 @ file:///C:/b/abs_dfnftvxi4k/croot/unicodedata2_1736543771112/work
-urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1678635778344/work
-validators @ file:///home/conda/feedstock_root/build_artifacts/validators_1712223474089/work
-watchdog @ file:///D:/bld/watchdog_1707295254844/work
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
+toml==0.10.2
+toolz==0.12.1
+tornado==6.4
+traitlets==5.14.2
+typing_extensions==4.11.0
+tzdata==2024.1
+tzlocal==5.2
+unicodedata2==15.1.0
+urllib3==1.26.15
+validators==0.28.0
+watchdog==4.0.0
+wcwidth==0.2.13
 webencodings==0.5.1
-Werkzeug @ file:///C:/b/abs_b21bhstb1q/croot/werkzeug_1731005800632/work
+Werkzeug==3.0.6
 wheel==0.43.0
-widgetsnbextension @ file:///home/conda/feedstock_root/build_artifacts/widgetsnbextension_1707420319466/work
-win-inet-pton @ file:///D:/bld/win_inet_pton_1667051142467/work
+widgetsnbextension==4.0.10
+win-inet-pton==1.1.0
 yarg==0.1.9
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1695255097490/work
+zipp==3.17.0
