--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,8 @@ GitPython==3.1.43
 idna==3.6
 importlib_metadata==7.1.0
 importlib_resources==6.4.0
+intel-cmplr-lib-ur==2025.0.5
+intel-openmp==2025.0.5
 ipykernel==6.29.3
 ipython==8.12.3
 ipywidgets==8.1.2
@@ -55,7 +57,8 @@ matplotlib==3.10.0
 matplotlib-inline==0.1.6
 mdurl==0.1.2
 mistune==3.0.2
-mkl_fft==1.3.8
+mkl==2025.0.1
+mkl_fft==1.3.11
 mkl_random==1.2.5
 mkl-service==2.4.1
 nbclient==0.10.0
@@ -108,6 +111,8 @@ smmap==5.0.0
 soupsieve==2.5
 stack-data==0.6.2
 streamlit==1.42.0
+tbb==2022.0.0
+tcmlib==1.2.0
 tenacity==8.2.3
 threadpoolctl==3.5.0
 tinycss2==1.2.1
@@ -118,6 +123,7 @@ traitlets==5.14.2
 typing_extensions==4.11.0
 tzdata==2024.1
 tzlocal==5.2
+umf==0.9.1
 unicodedata2==15.1.0
 urllib3==1.26.15
 validators==0.28.0
